<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/n"
                style="@style/viewParent.headerText"
                android:text="Hello" />

            <TextView
                android:id="@+id/name"
                style="@style/viewParent.headerText"
                android:text="Ali" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:minHeight="200dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="16dp"
                app:cardElevation="@dimen/card_maincourse_elevation"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/all_the_best_ndiscounts_are_nhere"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="@dimen/card_image_elevation"
                android:src="@drawable/header_image"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/refer_icon"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/refer_earn_button"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/refer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/viewParent.headerText"
                android:layout_weight="3"
                android:text="@string/popular_discounts" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        <ProgressBar-->
        <!--            android:id="@+id/pg"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="100dp" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>