<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardvieww"
    android:layout_width="match_parent"
    android:layout_height="430dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="15dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backgroundimage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/education"
            android:contentDescription="TODO"
            android:scaleType="centerCrop" />

        <TextView
           android:layout_marginLeft="10sp"
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/websitename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="Udemy"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_website_24" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="English"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_translate_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="@string/expires_on"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_hourglass_bottom_24" />

            <TextView
                android:id="@+id/expires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5_4_2022"
                android:textColor="@color/option4"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="2 hours"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/titlee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="Design Tools"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_check_circle_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:orientation="horizontal">


            <TextView
                android:textColor="@color/black"
                android:id="@+id/discountedprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="0$"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_discount_24" />

            <TextView
                android:id="@+id/orignalprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0$"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>